todo-app-web-server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoappwebserver-svc
spec:
  type: NodePort
  selector:
    app: todoappwebserver
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 3000
